# auto_gavhari

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
src/apis/: call_request.rs
src/helpers/: command_line.rs  generals.rs
src/models/general/: llm.rs
