[package]
name = "auto_gavhari"
version = "0.1.0"
edition = "2021"

[dependencies]

reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
crossterm = "0.28.1"
async-trait = "0.1.86"
webbrowser = "1.0.3"
strum = "0.27.0"
strum_macros = "0.27.0"
ai_functions = "0.1.1"
dotenv = "0.15.0"
